# ariel-os

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  ariel-os-cargo.toml  changelog_partial.md  committed.toml  deny.toml  laze-project.yml  openocd.cfg  prek.toml  renovate.json  rpi-pico-w.html  runner.toml
.github/: pull_request_template.md
boards/: README.md  adafruit-feather-nrf52840-express.yaml  adafruit-feather-nrf52840-sense.yaml  apple-m.yaml  arduino-uno-q.yaml  ariel-chips.yaml  bbc-microbit-v1.yaml  bbc-microbit-v2.yaml  dfrobot-firebeetle2-esp32-c6.yaml  dwm1001.yaml  espressif-esp32-c3-devkit-rust-1.yaml  espressif-esp32-c3-lcdkit.yaml  espressif-esp32-c6-devkitc-1.yaml  espressif-esp32-devkitc.yaml  espressif-esp32-ethernet-kit.yaml  espressif-esp32-h2-devkitm-1.yaml  espressif-esp32-s2-devkitc-1.yaml  espressif-esp32-s3-devkitc-1.yaml  espressif-esp8684-devkitc-02.yaml  heltec-wifi-lora-32-v3.yaml  makerdiary-nrf52840-mdk-usb-dongle.yaml  native.yaml  nice-nano-v2.yaml  nordic-thingy-52.yaml  nordic-thingy-91-x-nrf9151.yaml  nordic-thingy-91-x.yaml  nrf52840-mdk.yaml  nrf52840dk.yaml  nrf52dk.yaml  nrf5340dk.yaml  nrf54l15dk.yaml  nrf9151-dk.yaml  nrf9160dk-nrf9160.yaml  nrf9160dk.yaml  particle-xenon.yaml  rpi-pico-w.yaml  rpi-pico.yaml  rpi-pico2-w.yaml  rpi-pico2.yaml  seeedstudio-lora-e5-mini.yaml  (+21 more)
book/: book.toml  (+1 more)
examples/clock/: Cargo.toml  README.md  laze.yml
examples/clock/src/: main.rs
examples/device-metadata/: Cargo.toml
examples/device-metadata/src/: main.rs
examples/gnss-sensor-reader/: Cargo.toml
examples/gnss-sensor-reader/src/: main.rs
examples/http-client/: Cargo.toml
examples/http-client/src/: main.rs
examples/http-server/: Cargo.toml  README.md  laze.yml
examples/http-server/src/: main.rs
examples/minimal/: Cargo.toml  laze.yml
examples/minimal/src/: main.rs
examples/random/: Cargo.toml
examples/sensors-debug/: Cargo.toml  README.md  laze.yml
examples/sensors-debug/src/: main.rs  pins.rs  sensors.rs
examples/sntp-router/: Cargo.toml  README.md  laze.yml
examples/sntp-router/src/: main.rs
examples/storage/: Cargo.toml  README.md  laze.yml  partitions.csv
examples/storage/src/: main.rs
examples/tcp-echo/: Cargo.toml
examples/tcp-echo/src/: main.rs
examples/testing/: Cargo.toml
examples/thermometer/: Cargo.toml  README.md
examples/thermometer/src/: main.rs  pins.rs  sensors.rs
examples/usb-keyboard/: Cargo.toml  laze.yml
examples/usb-keyboard/src/: main.rs  pins.rs
src/ariel-os-boards/: Cargo.toml  build.rs  laze.yml
src/ariel-os-boards/bbc-microbit/: Cargo.toml
src/ariel-os-boards/bbc-microbit-v2/: Cargo.toml
src/ariel-os-boards/dwm1001/: Cargo.toml
src/ariel-os-boards/espressif-esp32-s3-wroom-1/: Cargo.toml
src/ariel-os-boards/microbit/: Cargo.toml
src/ariel-os-boards/microbit-v2/: Cargo.toml
src/ariel-os-boards/native/: Cargo.toml
src/ariel-os-boards/native/src/: lib.rs
src/ariel-os-boards/nrf51/: Cargo.toml
src/ariel-os-boards/nrf52/: Cargo.toml
src/ariel-os-boards/nrf52840-mdk/: Cargo.toml
src/ariel-os-boards/nrf52840dk/: Cargo.toml
src/ariel-os-boards/nrf52dk/: Cargo.toml
src/ariel-os-boards/nrf5340/: Cargo.toml
src/ariel-os-boards/nrf5340dk/: Cargo.toml
src/ariel-os-boards/particle-xenon/: Cargo.toml
src/ariel-os-boards/rpi-pico2/: Cargo.toml
src/ariel-os-boards/rpi-pico2/src/: lib.rs
src/ariel-os-boards/src/: adafruit-feather-nrf52840-express.rs  adafruit-feather-nrf52840-sense.rs  arduino-uno-q.rs  bbc-microbit-v2.rs  dfrobot-firebeetle2-esp32-c6.rs  dwm1001.rs  espressif-esp32-c3-devkit-rust-1.rs  heltec-wifi-lora-32-v3.rs  lib.rs  makerdiary-nrf52840-mdk-usb-dongle.rs  native.rs  nice-nano-v2.rs  nordic-thingy-52.rs  nordic-thingy-91-x-nrf5340-app.rs  nordic-thingy-91-x-nrf9151.rs  nrf52840-mdk.rs  nrf52840dk.rs  nrf52dk.rs  nrf5340dk-app.rs  nrf54l15dk-app.rs  nrf9151-dk.rs  nrf9160dk-nrf9160.rs  particle-xenon.rs  pins.rs  rpi-pico.rs  seeedstudio-lora-e5-mini.rs  seeedstudio-xiao-nrf52840-plus.rs  st-b-l072z-lrwan1.rs  st-b-l475e-iot01a.rs  st-nucleo-c031c6.rs  st-nucleo-f042k6.rs  st-nucleo-f401re.rs  st-nucleo-f767zi.rs  st-nucleo-h755zi-q.rs  st-nucleo-wb55.rs  st-nucleo-wba55.rs  st-nucleo-wba65ri.rs  st-steval-mkboxpro.rs  stm32u083c-dk.rs
src/ariel-os-boards/st-nucleo-c031c6/: Cargo.toml  memory.x
src/ariel-os-boards/st-nucleo-c031c6/src/: lib.rs
src/ariel-os-boards/st-nucleo-f401re/: Cargo.toml
src/ariel-os-boards/st-nucleo-wb55/: Cargo.toml
src/ariel-os-builtin-sensors/: Cargo.toml
src/ariel-os-builtin-sensors/src/: lib.rs  sensor_signaling.rs  stts22h.rs
src/ariel-os-chips/: Cargo.toml
src/ariel-os-chips/nrf52/: Cargo.toml  build.rs
src/ariel-os-chips/rp/: Cargo.toml
src/ariel-os-chips/rp235x/: Cargo.toml
src/ariel-os-chips/stm32/: Cargo.toml
src/ariel-os-chips/stm32f4xx/: Cargo.toml
src/ariel-os-debug/: Cargo.toml
src/ariel-os-debug/src/: lib.rs
src/ariel-os-dummy/: Cargo.toml
src/ariel-os-dummy/src/: ble.rs  executor.rs  gpio.rs  lib.rs  peripheral.rs
src/ariel-os-log/: Cargo.toml
src/ariel-os-log/src/: lib.rs
src/ariel-os-native/: Cargo.toml
src/ariel-os-native/src/: gpio.rs  hwrng.rs  lib.rs  storage.rs
src/ariel-os-power/: Cargo.toml
src/ariel-os-power/src/: lib.rs  reset.rs  stop_mode.rs
src/ariel-os-random/: Cargo.toml  laze.yml
src/ariel-os-random/src/: getrandom.rs  lib.rs
src/ariel-os-sensors/: Cargo.toml
src/ariel-os-sensors-utils/: Cargo.toml
src/ariel-os-sensors-utils/src/: lib.rs  state_atomic.rs
src/ariel-os-sensors/src/: category.rs  label.rs  lib.rs  measurement_unit.rs  registry.rs  sample.rs  sensor.rs  value.rs
src/ariel-os-sensors/src/sensor/: reading_channels.rs  samples.rs
src/ariel-os-sntp/: Cargo.toml
src/ariel-os-sntp/src/: lib.rs
tests/gpio/: Cargo.toml
tests/gpio/src/: pins.rs
tests/spi-loopback/: Cargo.toml  laze.yml
tests/spi-loopback/src/: pins.rs
tests/spi-main/: Cargo.toml  laze.yml
tests/spi-main/src/: main.rs  pins.rs
tests/stack-painting/: Cargo.toml  laze.yml
tests/stack-painting/src/: test.rs
(+450 files in other folders)
