[package]
name = "device-metadata"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ariel-os = { path = "../../src/ariel-os" }
ariel-os-boards = { path = "../../src/ariel-os-boards" }

nrf-modem = { workspace = true, optional = true, features = ["dect"] }

[lints]
workspace = true
