[package]
name = "http-client"
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = [
  "csprng",
  "dns",
  "mdns",
  "tcp",
  "time",
] }
ariel-os-chips = { path = "../../src/ariel-os-chips" }
heapless = { workspace = true }
rand_core = { workspace = true }
reqwless = { version = "0.13.0", default-features = true, features = [
  "embedded-tls",
] }
