[package]
name = "http-server"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ariel-os = { path = "../../src/ariel-os" }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
embassy-sync = { workspace = true }
picoserve = { git = "https://github.com/sammhicks/picoserve", default-features = false, features = [
  "embassy",
  "json",
] }
serde = { workspace = true, optional = true }

[features]
button-reading = ["dep:serde"]

[lints]
workspace = true
