[package]
name = "spi-loopback-minimal"
edition.workspace = true
license.workspace = true

publish = false

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = [
  "time",
  "external-interrupts",
  "core-affinity",
] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
embassy-sync = { workspace = true, default-features = false }
esp-hal = { workspace = true, features = ["unstable", "esp32"] }

[lints]
workspace = true
