[package]
name = "example-random"
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# Enabling the feature "random" is somewhat redundant with laze.yml's selects:
# random, but helps with interactive tools.
ariel-os = { path = "../../src/ariel-os", features = ["random"] }
rand = { workspace = true }
