[package]
name = "sntp-router"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = ["udp", "time"] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
ariel-os-sntp = { path = "../../src/ariel-os-sntp" }

[lints]
workspace = true

