[package]
name = "testing"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ariel-os = { path = "../../src/ariel-os" }
ariel-os-chips = { path = "../../src/ariel-os-chips" }

[dev-dependencies]
embedded-test = { workspace = true }

[[test]]
name = "test"
harness = false
