[package]
name = "ariel-os-boards"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
cfg-if.workspace = true
linkme.workspace = true

ariel-os-rt = { path = "../ariel-os-rt" }

st-nucleo-f401re = { optional = true, path = "st-nucleo-f401re" }
rpi-pico = { optional = true, path = "rpi-pico" }
rpi-pico2 = { optional = true, path = "rpi-pico2" }

[features]
# Allows to have no boards selected, useful to run platform-independent tooling
no-boards = []
# both "rpi-pico" and "rpi-pico-w" are valid, so no "dep:rpi-pico"
rpi-pico-w = ["rpi-pico/rpi-pico-w"]
