[package]
name = "ariel-os-boards"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
cfg-if.workspace = true
linkme.workspace = true

ariel-os-rt = { path = "../ariel-os-rt" }

[features]
# Allows to have no boards selected, useful to run platform-independent tooling
no-boards = []
