[package]
name = "ariel-os-chips"
version = "0.1.0"
license.workspace = true
edition.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[target.'cfg(context = "rp")'.dependencies]
rp = { path = "rp" }

[target.'cfg(context = "stm32")'.dependencies]
stm32 = { path = "stm32" }
