[package]
name = "ariel-os-debug"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.feature-groups]
debug-output.xor = { features = ["defmt-rtt", "rtt-target", "std"] }

[package.metadata.features]
debug-output = { groups = ["debug-output"] }

[dependencies]
defmt-rtt = { workspace = true, optional = true }
featurecomb = { workspace = true }
rtt-target = { workspace = true, optional = true }
semihosting = { workspace = true, optional = true }

[target.'cfg(context = "xtensa")'.dependencies]
semihosting = { workspace = true, optional = true, features = [
  "openocd-semihosting",
] }

[features]
# Enables the debug output.
debug-output = []
# Enables stdout support, for native.
std = []

# Enables semihosting functionality.
semihosting = ["dep:semihosting"]

# Debug output transports.
defmt-rtt = ["dep:defmt-rtt"]
rtt-target = ["dep:rtt-target"]

[lints]
workspace = true
