[package]
name = "ariel-os-native"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
cfg-if = { workspace = true }
defmt = { workspace = true, optional = true }
embassy-embedded-hal = { workspace = true, optional = true }
embassy-executor = { workspace = true, default-features = false, features = [
] }
embedded-hal-async = { workspace = true }
paste = { workspace = true }
portable-atomic = { workspace = true }
ariel-os-debug = { workspace = true, features = ["std"] }
ariel-os-embassy-common = { workspace = true }
ariel-os-random = { workspace = true, optional = true }

[features]
## Enables GPIO interrupt support.
external-interrupts = [
  "ariel-os-embassy-common/external-interrupts",
]

## Enables seeding the random number generator from hardware.
hwrng = ["dep:ariel-os-random"]

## Enables I2C support.
i2c = ["ariel-os-embassy-common/i2c", "embassy-executor/integrated-timers"]

## Enables SPI support.
spi = ["ariel-os-embassy-common/spi", "embassy-executor/integrated-timers"]

## Enables storage support.
storage = ["dep:embassy-embedded-hal"]

## Enables USB support.
usb = []

## Enables defmt support.
defmt = ["dep:defmt" ]
