[package]
name = "ariel-os-power"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
cfg-if = { workspace = true }
critical-section = { workspace = true }
defmt = { workspace = true, optional = true }

[target.'cfg(context = "cortex-m")'.dependencies]
cortex-m = { workspace = true }

[target.'cfg(context = "esp")'.dependencies]
esp-hal = { workspace = true }

[target.'cfg(context = "nrf")'.dependencies]
embassy-nrf = { workspace = true }
portable-atomic = { workspace = true }

[target.'cfg(context = "rp")'.dependencies]
embassy-rp = { workspace = true }

[target.'cfg(context = "stm32")'.dependencies]
embassy-stm32 = { workspace = true }
portable-atomic = { workspace = true }

[features]
defmt = ["dep:defmt"]

[lints]
workspace = true
