[package]
name = "ariel-os-power"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]

[target.'cfg(context = "cortex-m")'.dependencies]
cortex-m = { workspace = true }

[target.'cfg(context = "esp")'.dependencies]
esp-hal = { workspace = true }

[target.'cfg(context = "stm32")'.dependencies]
critical-section = { workspace = true }
embassy-stm32 = { workspace = true }

[lints]
workspace = true
