[package]
name = "ariel-os-power"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ariel-os-embassy-common = { workspace = true }
ariel-os-hal = { workspace = true }

[target.'cfg(context = "cortex-m")'.dependencies]
cortex-m = { workspace = true }

[target.'cfg(context = "esp")'.dependencies]
esp-hal = { workspace = true }

[lints]
workspace = true
