[package]
name = "ariel-os-random"
version = "0.2.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rand_core = { workspace = true }

embassy-sync.workspace = true

rand_pcg = "0.3.1"
rand_chacha = { version = "0.3.1", default-features = false, optional = true }

getrandom = { version = "0.3.3", optional = true }

[features]
## If set, the one global RNG is also a cryptographically secure pseudo
## random number generator (CSPRNG), and thus, a `CryptoRng` can be produced.
## It also enables the `getrandom` backend, for which the CSPRNG is required.
csprng = ["dep:rand_chacha", "dep:getrandom"]
