[package]
name = "ariel-os-sensors-utils"
version = "0.1.0"
edition.workspace = true
description = "Provides utils useful for sensor drivers"
repository.workspace = true
license.workspace = true

[dependencies]
ariel-os-sensors = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
portable-atomic = { workspace = true }

[features]
_test = []

[lints]
workspace = true
