[package]
name = "ariel-os-sntp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
embassy-net = { workspace = true, features = ["udp"] }
embassy-time = { workspace = true }
ariel-os-log = { workspace = true }
ariel-os-threads = { workspace = true }
embassy-executor = { workspace = true }
sntpc = { version = "0.10.1", default-features = false }
sntpc-net-embassy = { version = "0.10.0", default-features = false }
sntpc-time-embassy = { version = "0.5.0" }

[features]
defmt = ["sntpc/defmt", "sntpc-net-embassy/defmt"]
log = ["sntpc/log", "sntpc-net-embassy/log"]

[lints]
workspace = true
