[package]
name = "tests_gpio"
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[[test]]
name = "test"
path = "src/test.rs"
harness = false

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = ["external-interrupts"] }
embedded-test = { workspace = true }
