[package]
name = "spi-loopback"
license.workspace = true
edition.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
embassy-sync = { workspace = true }
embedded-hal-async = { workspace = true }
once_cell = { workspace = true }
ariel-os = { path = "../../src/ariel-os", features = ["spi"] }
static_cell = { workspace = true }
