[package]
name = "spi-main"
license.workspace = true
edition.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
embassy-sync = { workspace = true }
embedded-hal-async = { workspace = true }
once_cell = { workspace = true }
ariel-os = { path = "../../src/ariel-os", features = ["spi"] }
ariel-os-chips = { path = "../../src/ariel-os-chips" }
static_cell = { workspace = true }
