[package]
name = "stack-painting"
edition.workspace = true
license.workspace = true
publish = false

[[test]]
name = "test"
path = "src/test.rs"
harness = false

[dependencies]
ariel-os = { path = "../../src/ariel-os" }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
embedded-test = { workspace = true }

[lints]
workspace = true
